--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_EXTENSIONS FALSE)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mssse3")
+
 list(APPEND SOURCES "bmp_overlay.cpp")
 list(APPEND SOURCES "bmp_overlay.h")
 
